<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BD24Live</string>
    <string name="news_paper_name">BD24Live</string>
    <string name="image">image</string>
    <string name="saved_news">Saved News</string>
    <string name="app_settings">APPLICATION SETTINGS</string>
    <string name="app_theme">Set Theme</string>
    <string name="app_set_font">Set News Font Size</string>
    <string name="app_set_notification">Set Notification Alert</string>
    <string name="app_sample_font">Sample Text</string>
    <string name="app_support_feedback">SUPPORT &amp; FEEDBACK</string>
    <string name="txt_choose_date">CHOOSE DATE RANGE FOR NEWS</string>
    <string name="txt_choose_cat">CHOOSE CATEGORY</string>
    
    <string name="txt_choose_date_epaper">CHOOSE DATE FOR EPAPER</string>
    <string name="txt_choose_city">CHOOSE CITY</string>
    
    <string name="txt_about_us">समय किसी व्यक्ति को लोप तो कर सकता है, लेकिन उसके विचार-सत्य का क्षरण नहीं कर सकता। \'सीमा-सन्देश\' इस तथ्य का जीवंत प्रमाण है। छह दशक पूर्व पंडित कमलनयन शर्मा ने नव-सिंचित धोरों में इसका बीजारोपण किया था। सामाजिक उत्थान के लिए प्रतिबद्ध वे राजनीतिक चिंतन ही नहीं, बल्कि गहन अर्थों में क्रांतिकारी व्यक्तित्त्व थे। जीवनदर्शन की नैसर्गिक डोरी से बंधे ऐसे शख्स, जिन्होंने जिन्दगी की कठोर नग्नता को न केवल चुनौती दी, बल्कि इसके सभी सुखद-दुखद परिणामों को हर रूप में स्वीकार किया। कथित धोरों की धरती में सार्थक सम्भावना के इस बीज का खुलकर प्रस्फूटन किया। समय की हर मार के बावजूद \'सीमा-सन्देश\' थोड़े ही समय में शोषितों और बेसहारा वर्ग के लिए घनी छांव देने वाला पेड़ बन गया। शोषित समाज के प्रणेता पंडित कमलनयन शर्मा का यह प्रयास मीडिया जगत में आज आदरणीय भी है और अग्रणीय भी। अन्याय, शोषण व सामाजिक विषमता की लड़ाई में स्वयंसिद्ध उदाहरण \'सीमा-सन्देश\' पंडित कमलनयन के इस मिशन की मशाल को उठाए हुए है। पंडित कमलनयन शर्मा के सभी पुत्रों ने इस थाती को सजगता से सम्भाला है। सबसे बड़े पुत्र बृजभूषण शर्मा के अथक प्रयासों का नतीजा है इसका जयपुर संस्करण। श्रम के प्रति अगाध निष्ठा के प्रतीक बृजभूषण शर्मा अपने कत्र्तव्यों का निर्वहन करने में कभी पीछे नहीं रहे।\n\nसादगी के प्रति उनका स्नेह उन्हें भीड़ से अलग करता है। डॉ. श्रीधर शर्मा शैक्षिक जगत के मूर्धन्य व्यक्तित्त्व हैं। प्राचार्य पद से सेवानिवृत्त वे गहन ज्ञान और व्यावहारिक कौशल के उपयुक्त संगम है। राजकीय सेवा में रहने के बावजूद \'सीमा-सन्देश\' के लिए समय निकालना उनकी प्राथमिकता रही है। दक्षता के हर आयाम के प्रति रूझान रखने वाले श्री श्रीधर शर्मा आज भी इस अखबार को अपना विशिष्ट दिशा-निर्देशन देकर इसका रूप निखार रहे हैं। इंजिनियर ललित शर्मा ने अपने पिताश्री के इस भावात्मक स्वरूप को अपने जीवन का हिस्सा मानकर सार्थक श्रद्धांजलि अर्पित की है।अविवाहित इस शख़्स ने अपने सामथ्र्य, क्षमता और योग्यता का हर दोहन कर \'सीमा-सन्देश\' को सार्थक ऊंचाइयां दी। जीवट और चुनौती उनके चरित्र का स्वाभाविक श्रृंगार है। साहित्यिक अभिरुचि सम्पन्न और कविमना ललित शर्मा के लिए \'सीमा-सन्देश\' का प्रत्येक अंक प्रसव-पीड़ा की वेदना और आनन्द का प्रदाता है।\n\nचिंतन और मंथन का गहन प्रवाह उनके सम्पादकीयों की शोभा है। उनकी भाषा का तीखापन हमारे जीवन की विसंगतियों का सहज प्रकटीकरण है। अपनी आत्मा के दर्पण में \'सीमा-सन्देश\' के प्रतिबिम्ब को निहारने वाले वे जीवन सादगी के भी मूर्त रूप हैं। अपने पिता के विचारदीप को जलाए रखने में उनकी महती भूमिका शब्दों की मोहताज नहीं है। विनीत शर्मा ने सबसे छोटा पुत्र होने के नाते अपने पिता से अतिरिक्त स्नेह प्राप्त किया, लेकिन उनके ईमानदाराना अतिरिक्त श्रमदान की बदौलत ही आज यह समाचार-पत्र इस इलाके में अपना माथा ऊंचा किये खड़ा है। विनीत शर्मा अपने सामथ्र्य के प्रति सदैव विश्वस्त रहे हैं। उनके व्यवहारिक ज्ञान की सूझबूझ ने उन्हें कुशल प्रशासक के रूप में प्रतिष्ठित किया है। दूरदर्शिता उनके व्यक्तित्त्व की वह आंख है, जिसके लिए वे सभी भाइयों में छोटा होने के बावजूद कई बार परिपक्व वजूद दिखाते रहे हैं। अब तीसरी पीढ़ी ने \'सीमा-सन्देश\' की ध्वजा को थामा है। वैभव शर्मा ने करीब तीन साल पूर्व इसकी महकती बगिया में प्रवेश किया। वांछित शैक्षिक योग्यता और नव-तकनीक को समर्पित वैभव ने थोड़े ही समय में अपनी प्रतिभा सिद्ध कर दी। नव-संचारित ऊर्जा और जीवंत शक्ति की बदौलत नये प्रतिमानों को गढऩे की ललक देखकर ऐसा लग रहा है कि आने वाले दिनों में कुछ नये मील के पत्थर स्थापित होंगे। अपने दादा श्री (पं. कमलनयन शर्मा) और बड़े पापा (ललित शर्मा) के जीवन से अनुप्रेरित होना उसके व्यक्तित्त्व का छिपा हुआ हिस्सा है। विश्वास है कि नई पीढ़ी का यह प्रणेता सामाजिक प्रतिबद्धता के इस मिशनीय नींव पत्थर को अपना प्रकाश पुंज बनाए रखेगा।\n\n उद्गार\nभारतभूषण \'शून्य\'\nसीमा-सन्देश परिवार का अंतरंग सदस्य </string>
    
    <string name="txt_company_website">www.bd24live.com</string>
    <string name="txt_company_phone">Ph : +88 01863719828,+8801711813893,(+88) 044 78999950-54</string>
    <string name="txt_company_email">Email : info@bd24live.com</string>
     
    <string name="txt_terms_of_use">TERMS OF SERVICE\n\nPlease read this document carefully before using this app. This license provides important information concerning the app.
        \n\n1.All the questions and information provided in this app are gathered from various resources including internet and we do not express any ownership of these, although we have taken extra care to keep the information accurate but we not take the responsibility in case of any faulty information or question.
        \n\n2.In this free app advertisements will be shown, when you click on advertisement you will be redirected to a third party\'s webpage and they may use certain of your information, including your email address, phone number and a list of apps on your device.TERMS OF SERVICE\n\nPlease read this document carefully before using this app. This license provides important information concerning the app.
        \n\n1.All the questions and information provided in this app are gathered from various resources including internet and we do not express any ownership of these, although we have taken extra care to keep the information accurate but we not take the responsibility in case of any faulty information or question.
        \n\n2.In this free app advertisements will be shown, when you click on advertisement you will be redirected to a third party\'s webpage and they may use certain of your information, including your email address, phone number and a list of apps on your device.</string>
    
    
    
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="time_out">Time Out</string>
    <string name="error_occured">Error Occurred</string>
</resources>
